--- a/public/assignment/assignment1/style.css
+++ b/public/assignment/assignment1/style.css
@@ -5,18 +5,18 @@ div.general {
 
 input.general {
     margin-bottom: 10px;
-    height: 50px;
+    height: 5%;
 }
 
 button.general {
     margin-bottom: 10px;
-    height: 50px;
+    height: 5%;
 }
 
 a.register {
     background-color: forestgreen;
     border-color: darkgreen;
-    height: 50px;
+    height: 5%;
 }
 
 a.register:hover {
@@ -26,7 +26,7 @@ a.register:hover {
 a.cancel {
     background-color: red;
     border-color: darkred;
-    height: 50px;
+    height: 5%;
 }
 
 a.cancel:hover {
