--- a/public/assignment/assignment1/style.css
+++ b/public/assignment/assignment1/style.css
@@ -3,20 +3,50 @@ div.general {
     margin-right: 2%;
 }
 
+div.header {
+    padding-top: 0;
+    margin-top: 0;
+    padding-left: 2%;
+    padding-right: 2%;
+    background-color: dodgerblue;
+    width: 100%;
+    height: 75px;
+}
+
+div.left {
+    float: left;
+}
+
+div.right {
+    float: right;
+}
+
+h1.leftHeader {
+    text-align: left;
+    color: white;
+    width: 100%;
+}
+
+h1.rightHeader {
+    float: right;
+    color: white;
+}
+
 input.general {
     margin-bottom: 10px;
-    height: 15%;
 }
 
 button.general {
     margin-bottom: 10px;
-    height: 15%;
+}
+
+a.general {
+    margin-bottom: 10px;
 }
 
 a.register {
     background-color: forestgreen;
     border-color: darkgreen;
-    height: 5%;
 }
 
 a.register:hover {
@@ -26,7 +56,6 @@ a.register:hover {
 a.cancel {
     background-color: red;
     border-color: darkred;
-    height: 5%;
 }
 
 a.cancel:hover {
