--- a/public/assignment/assignment1/style.css
+++ b/public/assignment/assignment1/style.css
@@ -13,6 +13,26 @@ div.header {
     height: 75px;
 }
 
+div.floatVertical {
+    margin-top: 12px;
+}
+
+div.main {
+    margin-top: 5px;
+}
+
+div.footer {
+    position:fixed;
+    bottom: 0;
+    padding-top: 0;
+    margin-top: 0;
+    padding-left: 2%;
+    padding-right: 2%;
+    background-color: dodgerblue;
+    width: 100%;
+    height: 75px;
+}
+
 div.left {
     float: left;
 }
@@ -60,4 +80,9 @@ a.cancel {
 
 a.cancel:hover {
     background-color: darkred;
+}
+
+img.tiny {
+    width: 75px;
+    height: 50px;
 }
