--- a/public/assignment/assignment1/style.css
+++ b/public/assignment/assignment1/style.css
@@ -1,13 +1,19 @@
+body.withHeader {
+    padding-top: 75px;
+}
+
+body.withFooter {
+    padding-bottom: 75px;
+}
+
 div.general {
     margin-left: 2%;
     margin-right: 2%;
 }
 
 div.header {
-    padding-top: 0;
+    padding: 0 2% 75px 2%;
     margin-top: 0;
-    padding-left: 2%;
-    padding-right: 2%;
     background-color: dodgerblue;
     width: 100%;
     height: 75px;
