--- a/public/assignment/assignment3/views/user/templates/register.view.client.html
+++ b/public/assignment/assignment3/views/user/templates/register.view.client.html
@@ -1,11 +1,16 @@
-<div class="general">
+<div ng-controller="registerController" class="general">
     <h1 class="general">Register</h1>
+    <div class="alert alert-danger"
+         ng-show="registerError">
+        {{registerError}}
+    </div>
     <form method="post" action="/data/login/">
         <label for="username">
             Username
         </label>
         <input name="username"
                id="username"
+               ng-model="user.username"
                type="text"
                placeholder="username"
                class="form-control general"/>
@@ -14,6 +19,7 @@
         </label>
         <input name="password"
                id="password"
+               ng-model="user.password"
                type="password"
                placeholder="password"
                class="form-control general"/>
@@ -22,12 +28,13 @@
         </label>
         <input name="verify"
                id="verify"
+               ng-model="user.verify"
                type="password"
                placeholder="password"
                class="form-control general"/>
     </form>
 
-    <a href="#!/user/:uid"
+    <a ng-click="register(user)"
        class="btn btn-block btn-primary general">
         Register
     </a>
