--- a/public/assignment/assignment3/views/user/templates/profile.view.client.html
+++ b/public/assignment/assignment3/views/user/templates/profile.view.client.html
@@ -8,7 +8,10 @@
             </div>
             <div class="right">
             <h1 class="rightHeader">
-                <a href="#!/user/:uid" class="normal">&#10003;</a>
+                <a ng-click="updateCurr(user)"
+                   class="btn btn-block btn-primary normal">
+                    &#10003;
+                </a>
             </h1>
             </div>
         </div>
@@ -53,7 +56,7 @@
                        placeholder="Last Name"
                        class="form-control general"/>
             </form>
-            <a ng-click="website(user)"
+            <a ng-click="websites()"
                class="btn btn-block btn-primary">
                 Websites
             </a>
