--- a/public/assignment/assignment3/views/user/templates/login.view.client.html
+++ b/public/assignment/assignment3/views/user/templates/login.view.client.html
@@ -1,4 +1,4 @@
-<div ng-controller="loginController">
+<div>
     <div class="general">
         <h1 class="general">Login</h1>
         <div class="alert alert-danger"
@@ -11,7 +11,7 @@
             </label>
             <input name="username"
                    id="username"
-                   ng-model="user.username"
+                   ng-model="model.user.username"
                    type="text"
                    placeholder="username"
                    class="form-control general"/>
@@ -20,13 +20,13 @@
             </label>
             <input name="password"
                    id="password"
-                   ng-model="user.password"
+                   ng-model="model.user.password"
                    type="password"
                    placeholder="password"
                    class="form-control general"/>
         </form>
             <a  class="btn btn-block btn-primary general"
-                ng-click="login(user)">
+                ng-click="model.login(model.user)">
                 Login
             </a>
         <a href="#!/register"
