--- a/public/assignment/assignment3/views/website/templates/website-new.view.client.html
+++ b/public/assignment/assignment3/views/website/templates/website-new.view.client.html
@@ -11,35 +11,11 @@
 <div class="full">
 <div class="sidebar">
     <ul class="list-group">
-        <li class="list-group-item">
-            Address Book App
+        <li ng-repeat="website in model.websites" class="list-group-item">
+            <a ng-click="model.pages(website)">{{website.name}}</a>
             <span class="right">
-                <a href="#!/user/:uid/website/:wid/">
-                    <img src="GearBlue.png" class="miniscule">
-                </a>
-            </span>
-        </li>
-        <li class="list-group-item">
-            Blogger
-            <span class="right">
-                <a href="#!/user/:uid/website/:wid/">
-                    <img src="GearBlue.png" class="miniscule">
-                </a>
-            </span>
-        </li>
-        <li class="list-group-item">
-            Blogging App
-            <span class="right">
-                <a href="#!/user/:uid/website/:wid/">
-                    <img src="GearBlue.png" class="miniscule">
-                </a>
-            </span>
-        </li>
-        <li class="list-group-item">
-            Script Testing App
-            <span class="right">
-                <a href="#!/user/:uid/website/:wid/">
-                    <img src="GearBlue.png" class="miniscule">
+                <a ng-click="model.edit(website)">
+                    <img src="./img/GearBlue.png" class="miniscule">
                 </a>
             </span>
         </li>
@@ -53,22 +29,24 @@
         </label>
         <input name="webname"
                id="webname"
-               type="url"
-               placeholder="Website Name"
+               ng-model="model.website.name"
+               type="text"
+               placeholder="Site Name"
                class="form-control general"/>
         <label for="description">
             Website Description:
         </label>
         <textarea name="description"
                 id="description"
+                ng-model="model.website.description"
                 placeholder="Describe your website..."
                 class="form-control general large"></textarea>
     </form>
-    <a href="#!/user/:uid/website/"
+    <a ng-click="model.create(model.website)"
        class="btn btn-block btn-primary">
         Ok
     </a>
-    <a href="#!/user/:uid/website/"
+    <a ng-click="model.cancel()"
        class="btn btn-block btn-primary">
         Cancel
     </a>
@@ -78,7 +56,7 @@
 <nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container footer">
         <div class="right floatVertical">
-            <a href="#!/login">
+            <a ng-click="model.profile()">
                 <img src="./img/PersonProfile.png" class="tiny">
             </a>
         </div>
