--- a/public/assignment/assignment3/views/website/templates/website-edit.view.client.html
+++ b/public/assignment/assignment3/views/website/templates/website-edit.view.client.html
@@ -47,7 +47,7 @@
                 placeholder="Describe your website..."
                 class="form-control general large"></textarea>
     </form>
-    <a ng-click="model.update(model.website)"
+    <a ng-click="model.updateWebsite(model.website)"
        class="btn btn-block btn-primary">
         Ok
     </a>
