--- a/public/assignment/assignment3/views/website/templates/website-list.view.client.html
+++ b/public/assignment/assignment3/views/website/templates/website-list.view.client.html
@@ -2,7 +2,7 @@
     <div class="container header">
         <div class="left">
             <h1 class="leftHeader">
-                <a href="#!/user/:uid" class="normal"><   </a>Websites
+                <a ng-click="model.back()" class="normal"><   </a>Websites
             </h1>
         </div>
         <div class="right">
