--- a/public/assignment/assignment3/views/page/templates/page-list.view.client.html
+++ b/public/assignment/assignment3/views/page/templates/page-list.view.client.html
@@ -2,12 +2,12 @@
     <div class="container header">
         <div class="left">
             <h1 class="leftHeader">
-                <a href="#!/user/:uid/website" class="normal"><   </a>Pages
+                <a ng-click="model.back()" class="normal"><   </a>Pages
             </h1>
         </div>
         <div class="right">
             <h1 class="rightHeader">
-                <a href="#!/user/:uid/website/:wid/page/new" class="normal">+</a>
+                <a ng-click="model.new()" class="normal">+</a>
             </h1>
         </div>
     </div>
@@ -15,42 +15,10 @@
 
 <div class="main general">
     <ul class="list-group">
-        <li class="list-group-item">
-            <a href="#!/user/:uid/website/:wid/page/:pid/widget">Blog Post</a>
+        <li ng-repeat="page in model.pages" class="list-group-item">
+            <a ng-click="model.widgets(page)">{{page.name}}</a>
             <span class="right">
-                <a href="#!/user/:uid/website/:wid/page/:pid">
-                    <img src="./img/GearBlue.png" class="miniscule">
-                </a>
-            </span>
-        </li>
-        <li class="list-group-item">
-            <a href="#!/user/:uid/website/:wid/page/:pid/widget">Blogs</a>
-            <span class="right">
-                <a href="#!/user/:uid/website/:wid/page/:pid">
-                    <img src="./img/GearBlue.png" class="miniscule">
-                </a>
-            </span>
-        </li>
-        <li class="list-group-item">
-            <a href="#!/user/:uid/website/:wid/page/:pid/widget">Home</a>
-            <span class="right">
-                <a href="#!/user/:uid/website/:wid/page/:pid">
-                    <img src="./img/GearBlue.png" class="miniscule">
-                </a>
-            </span>
-        </li>
-        <li class="list-group-item">
-            <a href="#!/user/:uid/website/:wid/page/:pid/widget">About</a>
-            <span class="right">
-                <a href="#!/user/:uid/website/:wid/page/:pid">
-                    <img src="./img/GearBlue.png" class="miniscule">
-                </a>
-            </span>
-        </li>
-        <li class="list-group-item">
-            <a href="#!/user/:uid/website/:wid/page/:pid/widget">Contact Us</a>
-            <span class="right">
-                <a href="#!/user/:uid/website/:wid/page/:pid">
+                <a ng-click="model.edit(page)">
                     <img src="./img/GearBlue.png" class="miniscule">
                 </a>
             </span>
@@ -61,7 +29,7 @@
 <nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container footer">
         <div class="right floatVertical">
-            <a href="#!/user/:uid">
+            <a ng-click="model.profile()">
                 <img src="./img/PersonProfile.png" class="tiny">
             </a>
         </div>
