--- a/public/assignment/assignment3/views/widget/templates/widget-chooser.view.client.html
+++ b/public/assignment/assignment3/views/widget/templates/widget-chooser.view.client.html
@@ -11,17 +11,17 @@
 <div class="main general">
     <ul class="list-group">
         <li class="list-group-item">
-            <a href="#!/user/:uid/website/:wid/page/:pid/widget/:wgid">Heading</a>
+            <a ng-click="model.newWidget('HEADING')">Heading</a>
         </li>
         <li class="list-group-item">
-            <a href="#!/user/:uid/website/:wid/page/:pid/widget/:wgid">Image</a>
+            <a ng-click="model.newWidget('IMAGE')">Image</a>
         </li>
         <li class="list-group-item">
-            <a href="#!/user/:uid/website/:wid/page/:pid/widget/:wgid">Youtube</a>
+            <a ng-click="model.newWidget('YOUTUBE')">Youtube</a>
         </li>
     </ul>
 
-    <a href="#!/user/:uid/website/:wid/page/:pid/widget"
+    <a ng-click="model.cancel()"
        class="btn btn-block btn-primary">
         Cancel
     </a>
@@ -30,7 +30,7 @@
 <nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container footer">
         <div class="right floatVertical">
-            <a href="#!/user/:uid">
+            <a ng-click="model.profile()">
                 <img src="./img/PersonProfile.png" class="tiny">
             </a>
         </div>
