--- a/public/assignment/assignment3/views/widget/templates/widget-list.view.client.html
+++ b/public/assignment/assignment3/views/widget/templates/widget-list.view.client.html
@@ -2,12 +2,12 @@
     <div class="container header">
         <div class="left">
             <h1 class="leftHeader">
-                <a href="#!/user/:uid/website/:wid/page/:pid" class="normal"><   </a>Widget List
+                <a ng-click="model.back()" class="normal"><   </a>Widget List
             </h1>
         </div>
         <div class="right">
             <h1 class="rightHeader">
-                <a href="#!/user/:uid/website/:wid/page/:pid/widget/new" class="normal">+</a>
+                <a ng-click="model.new()" class="normal">+</a>
             </h1>
         </div>
     </div>
@@ -15,40 +15,29 @@
 
 <div class="main general">
     <ul class="list-group">
-        <li class="list-group-item">
-            <a href="widget-heading.view.client.html">Heading</a>
+        <li ng-repeat="widget in model.widgets" class="list-group-item">
+            <a ng-click="model.edit(widget)">{{widget.widgetType}}</a>
             <span class="right">
-                <a href="#!/user/:uid/website/:wid/page/:pid/widget/:wgid">
+                <a ng-click="model.edit(widget)">
                     <img src="./img/GearBlue.png" class="miniscule">
                 </a>
             </span>
-            <h3>Team JNPR</h3>
-        </li>
-        <li class="list-group-item">
-            <a href="widget-image.view.client.html">Image</a>
-            <span class="right">
-                <a href="#!/user/:uid/website/:wid/page/:pid/widget/:wgid">
-                    <img src="./img/GearBlue.png" class="miniscule">
-                </a>
-            </span>
-            <h3></h3>
-            <img src="https://cdn.discordapp.com/attachments/266020118385917952/335585804061638687/jnpr_team_wallpaper_by_dantherrien101-d8kn02l.png"
-                 width="50%">
-        </li>
-        <li class="list-group-item">
-            <a href="widget-youtube.view.client.html">Youtube</a>
-            <span class="right">
-                <a href="#!/user/:uid/website/:wid/page/:pid/widget/:wgid">
-                    <img src="./img/GearBlue.png" class="miniscule">
-                </a>
-            </span>
-            <h3></h3>
-            <iframe width="50%"
-                    height="315"
-                    src="https://www.youtube.com/embed/5_BF789hJuE"
-                    frameborder="0"
-                    allowfullscreen>
-            </iframe>
+            <div ng-switch="widget.widgetType">
+                <div ng-switch-when="HEADING">
+                    <h3>{{widget.text}}</h3>
+                </div>
+                <div ng-switch-when="IMAGE">
+                    <img src="{{widget.url}}">
+                </div>
+                <div ng-switch-when="YOUTUBE">
+                    <iframe width="{{widget.width}}"
+                            height="315"
+                            src="{{$sce.trustAsResourceUrl(widget.url)}}"
+                            frameborder="0"
+                            allowfullscreen>
+                    </iframe>
+                </div>
+            </div>
         </li>
     </ul>
 </div>
@@ -56,7 +45,7 @@
 <nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container footer">
         <div class="right floatVertical">
-            <a href="#!/user/:uid">
+            <a ng-click="model.profile()">
                 <img src="./img/PersonProfile.png" class="tiny">
             </a>
         </div>
