--- a/public/assignment/assignment4/views/widget/templates/widget-image.view.client.html
+++ b/public/assignment/assignment4/views/widget/templates/widget-image.view.client.html
@@ -10,7 +10,7 @@
 
 <div class="full">
 <div class="general main">
-    <form method="post" action="/data/edit/">
+    <form method="post" action="/api/upload" enctype="multipart/form-data">
         <label for="name">
             Name:
         </label>
@@ -51,19 +51,42 @@
                placeholder="Image Width"
                class="form-control general"
                value="50%">
-        <label for="image">
-            Upload Image:
-        </label>
-        <input name="image"
-               id="image"
-               type="file"
-               placeholder="Choose File"
-               class="form-control general"
-               value="50%">
     </form>
     <a ng-click="model.updateCurr(model.widget)"
        class="btn btn-block btn-primary">
         Ok
+    </a>
+    <div class="topbot5">
+        <form method="post" action="/api/upload" enctype="multipart/form-data">
+            <input  name="myFile"
+                    title="File"
+                    type="file"
+                    class="form-control"/>
+            <input  name="userId"
+                    title="uid"
+                    value="{{model.uid}}"
+                    style="display: none"/>
+            <input  name="websiteId"
+                    title="wid"
+                    value="{{model.wid}}"
+                    style="display: none"/>
+            <input  name="pageId"
+                    title="pid"
+                    value="{{model.pid}}"
+                    style="display: none"/>
+            <input  name="widgetId"
+                    title="wgid"
+                    value="{{model.widget._id}}"
+                    style="display: none"/>
+            <button type="submit"
+                    class="btn btn-block btn-primary">
+                Upload Image
+            </button>
+        </form>
+    </div>
+    <a ng-click="model.search()"
+       class="btn btn-block btn-primary">
+        Search
     </a>
     <a ng-click="model.cancel()"
        class="btn btn-block btn-primary">
