--- a/public/assignment/assignment5/views/website/templates/website-edit.view.client.html
+++ b/public/assignment/assignment5/views/website/templates/website-edit.view.client.html
@@ -35,7 +35,7 @@
         <input name="webname"
                id="webname"
                ng-model="model.website.name"
-               type="url"
+               type="text"
                placeholder="Website Name"
                class="form-control general"/>
         <label for="description">
@@ -43,7 +43,7 @@
         </label>
         <textarea name="description"
                 id="description"
-                  ng-model="model.website.description"
+                ng-model="model.website.description"
                 placeholder="Describe your website..."
                 class="form-control general large"></textarea>
     </form>
