--- a/public/assignment/assignment5/views/widget/templates/widget-chooser.view.client.html
+++ b/public/assignment/assignment5/views/widget/templates/widget-chooser.view.client.html
@@ -19,6 +19,12 @@
         <li class="list-group-item">
             <a ng-click="model.newWidget('YOUTUBE')">Youtube</a>
         </li>
+        <li class="list-group-item">
+            <a ng-click="model.newWidget('HTML')">HTML</a>
+        </li>
+        <li class="list-group-item">
+            <a ng-click="model.newWidget('TEXT')">Text</a>
+        </li>
     </ul>
 
     <a ng-click="model.cancel()"
