--- a/public/assignment/assignment5/views/widget/templates/widget-edit.view.client.html
+++ b/public/assignment/assignment5/views/widget/templates/widget-edit.view.client.html
@@ -19,6 +19,9 @@
     <div ng-switch-when="YOUTUBE">
         <div ng-include="'./views/widget/templates/widget-youtube.view.client.html'"></div>
     </div>
+    <div ng-switch-when="HTML">
+        <div ng-include="'./views/widget/templates/widget-html.view.client.html'"></div>
+    </div>
 </div>
 </div>
 
