--- a/public/assignment/assignment5/views/widget/templates/widget-ul.html
+++ b/public/assignment/assignment5/views/widget/templates/widget-ul.html
@@ -20,14 +20,24 @@
                 <img ng-src="{{widget.url}}">
             </div>
             <div ng-switch-when="YOUTUBE">
-                <iframe width="{{widget.width}}"
-                        height="315"
-                        ng-src="{{model.trustUrl(widget.url)}}"
-                        frameborder="0"
-                        allowfullscreen>
-                </iframe>
+                <div ng-switch-when="YOUTUBE" class="youtube-widget">
+                    <iframe width="{{widget.width}}"
+                            height="315"
+                            ng-src="{{model.trustUrl(widget.url)}}"
+                            frameborder="0"
+                            allowfullscreen>
+                    </iframe>
+                </div>
             </div>
             <div ng-switch-when="HTML" ng-bind-html="model.trustHTML(widget.text)"></div>
+            <div ng-switch-when="TEXT">
+                <div ng-if="widget.formatted" text-angular ta-toolbar="..."></div>
+                <input ng-if="!widget.formatted && (!widget.rows || widget.rows===1)"
+                       placeholder="{{widget.textInput.placeholder}}" class="form-control"/>
+                <textarea ng-if="!widget.formatted && (widget.rows > 1)"
+                          rows="{{widget.rows}}" placeholder="{{widget.placeholder}}"
+                          class="form-control">{{widget.text}}</textarea>
+            </div>
         </div>
     </li>
 </ul>
