--- a/public/assignment/assignment5/views/widget/templates/widget-chooser.view.client.html
+++ b/public/assignment/assignment5/views/widget/templates/widget-chooser.view.client.html
@@ -23,7 +23,7 @@
             <a ng-click="model.newWidget('HTML')">HTML</a>
         </li>
         <li class="list-group-item">
-            <a ng-click="model.newWidget('TEXT')">Text</a>
+            <a ng-click="model.newWidget('INPUT')">Text</a>
         </li>
     </ul>
 
