--- a/public/assignment/assignment5/views/widget/templates/widget-image.view.client.html
+++ b/public/assignment/assignment5/views/widget/templates/widget-image.view.client.html
@@ -50,7 +50,7 @@
                type="number"
                placeholder="Image Width"
                class="form-control general"
-               value="50%">
+               value="50">
     </form>
     <a ng-click="model.updateCurr(model.widget)"
        class="btn btn-block btn-primary">
