--- a/public/assignment/assignment5/views/widget/templates/widget-edit.view.client.html
+++ b/public/assignment/assignment5/views/widget/templates/widget-edit.view.client.html
@@ -9,7 +9,7 @@
 </nav>
 
 <div class="full">
-<div ng-switch="model.widget.widgetType" class="general main">
+<div ng-switch="model.widget.type" class="general main">
     <div ng-switch-when="HEADING">
         <div ng-include="'./views/widget/templates/widget-heading.view.client.html'"></div>
     </div>
@@ -21,6 +21,9 @@
     </div>
     <div ng-switch-when="HTML">
         <div ng-include="'./views/widget/templates/widget-html.view.client.html'"></div>
+    </div>
+    <div ng-switch-when="INPUT">
+        <div ng-include="'./views/widget/templates/widget-text.view.client.html'"></div>
     </div>
 </div>
 </div>
