--- a/public/assignment/assignment5/views/widget/templates/widget-html.view.client.html
+++ b/public/assignment/assignment5/views/widget/templates/widget-html.view.client.html
@@ -1,6 +1,29 @@
+<nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container header">
+        <div class="left">
+            <h1 class="leftHeader">
+                Edit HTML
+            </h1>
+        </div>
+    </div>
+</nav>
+
 <div ng-model="model.widget.text"
      text-angular
      ta-toolbar="[['h1','h2','h3'],['bold','italics','underline','strikeThrough'],
         ['ul','ol'],['justifyLeft','justifyCenter','justifyRight','justifyFull'],
         ['indent','outdent'],['html']]">
 </div>
+
+<a ng-click="model.updateCurr(model.widget)"
+   class="btn btn-block btn-primary">
+    Ok
+</a>
+<a ng-click="model.cancel()"
+   class="btn btn-block btn-primary">
+    Cancel
+</a>
+<a ng-click="model.delete()"
+   class="btn btn-block btn-primary cancel">
+    Delete
+</a>
