--- a/public/assignment/assignment5/views/widget/templates/widget-ul.html
+++ b/public/assignment/assignment5/views/widget/templates/widget-ul.html
@@ -2,11 +2,11 @@
     <li ng-repeat="widget in model.widgets" class="list-group-item">
         <a ng-click="model.edit(widget)">{{widget.widgetType}}</a>
         <span class="right">
-                    <a ng-click="model.edit(widget)">
-                        <img src="./img/GearBlue.png" class="miniscule">
-                    </a>
-                </span>
-        <div ng-switch="widget.widgetType">
+            <a ng-click="model.edit(widget)">
+                <img src="./img/GearBlue.png" class="miniscule">
+            </a>
+        </span>
+        <div ng-switch="widget.type">
             <div ng-switch-when="HEADING">
                 <div ng-switch="widget.size">
                     <h1 ng-switch-when="1">{{widget.text}}</h1>
@@ -17,21 +17,22 @@
                 </div>
             </div>
             <div ng-switch-when="IMAGE">
-                <img ng-src="{{widget.url}}">
+                <img ng-src="{{widget.url}}" width="{{widget.width}}">
             </div>
-            <div ng-switch-when="YOUTUBE">
-                <div ng-switch-when="YOUTUBE" class="youtube-widget">
-                    <iframe width="{{widget.width}}"
-                            height="315"
-                            ng-src="{{model.trustUrl(widget.url)}}"
-                            frameborder="0"
-                            allowfullscreen>
-                    </iframe>
-                </div>
+            <div ng-switch-when="YOUTUBE" class="youtube-widget">
+                <iframe width="{{widget.width}}"
+                        height="315"
+                        ng-src="{{model.trustUrl(widget.url)}}"
+                        frameborder="0"
+                        allowfullscreen>
+                </iframe>
             </div>
             <div ng-switch-when="HTML" ng-bind-html="model.trustHTML(widget.text)"></div>
-            <div ng-switch-when="TEXT">
-                <div ng-if="widget.formatted" text-angular ta-toolbar="..."></div>
+            <div ng-switch-when="INPUT">
+                <div ng-if="widget.formatted" text-angular
+                     ta-toolbar="[['h1','h2','h3'],['bold','italics','underline','strikeThrough'],
+                        ['ul','ol'],['justifyLeft','justifyCenter','justifyRight','justifyFull'],
+                ['indent','outdent'],['html']]"></div>
                 <input ng-if="!widget.formatted && (!widget.rows || widget.rows===1)"
                        placeholder="{{widget.textInput.placeholder}}" class="form-control"/>
                 <textarea ng-if="!widget.formatted && (widget.rows > 1)"
