--- a/public/project/views/userPages/templates/login-page.view.client.html
+++ b/public/project/views/userPages/templates/login-page.view.client.html
@@ -29,5 +29,9 @@
             ng-click="model.login(model.user)">
             Login
         </a>
+        <a  class="btn btn-block btn-primary general"
+            ng-click="model.cancel()">
+            Cancel
+        </a>
     </div>
 </div>
