--- a/public/project/style.css
+++ b/public/project/style.css
@@ -41,7 +41,7 @@
 .navbar-default .navbar-nav>li>input {
     color: #777;
     font-weight: normal;
-    margin-top: 0px;
+    margin-top: 0;
     margin-right: 2px;
 }
 
@@ -53,6 +53,21 @@
 
 .navbar .navbar-default {
     background-color: #999999;
+}
+
+
+.left {
+    display: inline-block;
+    float: left;
+    margin-right: 1%;
+    width: 43%;
+}
+
+.right {
+    display: inline-block;
+    float: right;
+    margin-left: 1%;
+    width: 43%;
 }
 
 body {
@@ -74,4 +89,20 @@ input.withButton {
 span.left {
     float: left;
     width: calc(100% - 27px)
+}
+
+.main {
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+.normal {
+    color: silver;
+}
+
+.normal:hover {
+}
+
+.table-hover tbody tr:hover td>a, .table-hover tbody tr:hover th>a {
+    color: #666666;
 }
