--- a/public/project/views/generalPages/templates/home-page.view.client.html
+++ b/public/project/views/generalPages/templates/home-page.view.client.html
@@ -1,66 +1,10 @@
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand active" href="#">TagMovies</a>
-        </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div>
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li><a ng-click="model.goToLogin()" ng-show="!model.user">Login</a></li>
-                    <li><a ng-click="model.goToRegister()" ng-show="!model.user">Register</a></li>
-                    <li><a ng-click="model.goToProfile()" ng-show="model.user">Profile</a></li>
-                    <li><a ng-click="model.goToAdmin()" ng-show="model.userIsAdmin">Profile</a></li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li><label for="Movie">Search Movies:</label>
-                        <input name="searchCritera"
-                                       checked="checked"
-                                       value="movie"
-                                       id="Movie"
-                                       ng-model="model.search.searchType"
-                                       type="radio"
-                                       placeholder="username"
-                                       class="radio-inline radios"/></li>
-                    <li><label for="Tag">Search Tags:</label>
-                        <input name="searchCritera"
-                                       value="tag"
-                                       id="Tag"
-                                       ng-model="model.search.searchType"
-                                       type="radio"
-                                       placeholder="username"
-                                       class="radio-inline radios"/></li>
-                    <li><input name="search"
-                               id="search"
-                               ng-model="model.search.searchText"
-                               type="text"
-                               placeholder="Search..."
-                               class="form-control withButton inline"/>
-                        <span class="input-group-btn inline">
-                            <a ng-click="model.goSearch(model.search)" class="btn btn-default" type="button">
-                                <span class="glyphicon glyphicon-search"></span>
-                            </a>
-                        </span>
-                    </li>
-                </ul>
-            </div>
-        </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-</nav>
+<div ng-include="'./views/generalPages/templates/navbar-component.view.client.html'"></div>
 
 <div class="main full">
     <div id="wrap">
         <div id="content">
             <h1 class="center" ng-show="!model.user">Welcome to TagMovies!</h1>
-            <h1 class="center" ng-show="model.user">Welcome back {{model.user.username}}!</h1>
+            <h1 class="center" ng-show="model.user">Welcome back {{model.user.firstName}}!</h1>
         </div>
     </div>
     <div id="wrap2">
