--- a/public/project/views/generalPages/templates/search-page.view.client.html
+++ b/public/project/views/generalPages/templates/search-page.view.client.html
@@ -1,61 +1,4 @@
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand active" href="#">TagMovies</a>
-        </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div>
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li><a ng-click="model.goToLogin()" ng-show="!model.user">Login</a></li>
-                    <li><a ng-click="model.goToRegister()" ng-show="!model.user">Register</a></li>
-                    <li><a ng-click="model.goToProfile()" ng-show="model.user">Profile</a></li>
-                    <li><a ng-click="model.goToAdmin()" ng-show="model.userIsAdmin">Profile</a></li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li><label for="Movie">Search Movies:</label>
-                        <input name="searchCritera"
-                               checked="checked"
-                               value="movie"
-                               id="Movie"
-                               ng-model="model.search.searchType"
-                               type="radio"
-                               placeholder="username"
-                               class="radio-inline radios"/></li>
-                    <li><label for="Tag">Search Tags:</label>
-                        <input name="searchCritera"
-                               value="tag"
-                               id="Tag"
-                               ng-model="model.search.searchType"
-                               type="radio"
-                               placeholder="username"
-                               class="radio-inline radios"/></li>
-                    <li><input name="search"
-                               id="search"
-                               ng-model="model.search.searchText"
-                               type="text"
-                               placeholder="Search..."
-                               class="form-control withButton inline"/>
-                        <span class="input-group-btn inline">
-                            <a ng-click="model.goSearch(model.search)" class="btn btn-default" type="button">
-                                <span class="glyphicon glyphicon-search"></span>
-                            </a>
-                        </span>
-                    </li>
-                </ul>
-            </div>
-        </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-</nav>
-
+<div ng-include="'./views/generalPages/templates/navbar-component.view.client.html'"></div>
 <div>
     <div ng-show="model.movies">
         <table class="table table-hover">
@@ -68,13 +11,51 @@
             </thead>
             <tbody>
                 <tr ng-repeat="movie in model.movies">
-                    <td><a ng-click="model.goToMovie(movie)">{{movie.title}}</a></td>
+                    <td><a ng-click="model.goToMovie(movie)" class="normal">{{movie.title}}</a></td>
                     <td>{{movie.original_language}}</td>
                     <td>
                         <img    src="http://image.tmdb.org/t/p/w185{{movie.poster_path}}"
                                 width="50px">
                     </td>
                 </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <div ng-show="model.users">
+        <table class="table table-hover">
+            <thead>
+            <tr>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>E-mail</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr ng-repeat="user in model.users">
+                <td><a ng-click="model.goToUser(user)" class="normal">{{user.firstName}}</a></td>
+                <td><a ng-click="model.goToUser(user)" class="normal">{{user.lastName}}</a></td>
+                <td>{{user.email}}</td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <div ng-show="model.tags">
+        <table class="table table-hover">
+            <thead>
+            <tr>
+                <th>Tag</th>
+                <th>Description</th>
+                <th>Movies</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr ng-repeat="tag in model.tags">
+                <td><a ng-click="model.goToTag(tag)" class="normal">{{tag.name}}</a></td>
+                <td><a ng-click="model.goToTag(tag)" class="normal">{{tag.description}}</a></td>
+                <td>{{tag.movies.size()}}</td>
+            </tr>
             </tbody>
         </table>
     </div>
