--- a/public/project/views/moviePages/templates/movie-page.html
+++ b/public/project/views/moviePages/templates/movie-page.html
@@ -17,7 +17,7 @@
            class="btn btn-block btn-primary inline">
             <span class="glyphicon glyphicon-plus"></span></a>
         <h3 class="inline">Favorites:</h3>
-        <h2 class="inline">{{model.movie.favs}}</h2>
+        <h2 class="inline">{{model.tagMovie.favs}}</h2>
         <h3>Revenue: ${{model.movie.revenue}}</h3>
         <h3>Release Date: {{model.movie.release_date}}</h3>
         <p>Overview: {{model.movie.overview}}</p>
